# runveil

./: .dockerignore  .env.development  .gitignore  CLAUDE.md  README.md  go.mod  go.sum  scan.md  wrangler.jsonc
.github/workflows/: ci.yml  runveil-scan.yml
agent/runveil-agent/: Cargo.toml  packages.json
agent/runveil-agent/src/: main.rs
cli/: go.mod  go.sum  main.go
cli/cmd/: admin.go  components.go  config.go  doctor.go  evidence.go  findings.go  keys.go  migrate.go  root.go  scan.go  scan_flags_test.go  scan_test.go  version.go
cli/reports/: scan.md
cmd/runveil/: main.go
dashboard/runveil-dashboard/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json  tailwind.config.js
dashboard/runveil-dashboard/src/: index.html  styles.scss
deploy/compose/: docker-compose.yml
docs/: ci.md
docs/site/: README.md  index.html
editors/vscode/: PUBLISHING.md  README.md  package.json  tsconfig.json
pkg/: go.mod  go.sum
pkg/infra/: apiclient.go  apikey.go  config.go  config_api.go  configfile.go  cvss.go  cvss_test.go  db.go  identity.go  nats.go  neo4j.go  osvclient.go  osvclient_test.go  secrets.go  secrets_test.go
pkg/kv1/: events.go
scripts/: make_demo_gif.py
services/api/: Dockerfile  audit.go  audit_test.go  auth.go  components.go  evidence.go  findings.go  go.mod  hotspots.go  identity.go  ingest.go  main.go  members.go  notifications.go  projects.go  risk.go  runtime.go  scans.go  sso.go  sso_test.go  trends.go
website/: README.md  _headers  app.js  index.html  styles.css
(+44 files in other folders)
